# spaceship-logistics-ai

./: .env.template  .gitignore  AI_USAGE.md  Coding_assignment.md  README.md  docker-compose.override.yml  docker-compose.yml
.serena/: project.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py  prompt_audit.py  settings.py
backend/app/ai/: __init__.py  contracts.py  explain.py  fact_extractor.py  prompts.py  router.py  safety.py  synonym_map.py  tools.py
backend/app/ai/providers/: base.py  claude.py  gemini.py  gemini_native.py  keyword.py
backend/app/analytics/: breakdowns.py  chart_spec.py  forecast.py  kpis.py
backend/app/api/: deps.py  routes_ask.py  routes_ask_v2.py  routes_auth.py  routes_health.py  routes_kpis.py
backend/app/auth/: security.py
backend/app/data/: importer.py
backend/app/db/: models.py  session.py
backend/app/repositories/: base.py  sqlalchemy_orders.py
backend/tests/: conftest.py  test_anchor_in_prompt.py  test_api.py  test_breakdowns_bucket_clamp.py  test_explain_sparse_hint.py  test_fact_extractor.py  test_fact_extractor_relative_time.py  test_forecast.py  test_gemini_native_schema.py  test_kpis.py  test_metric_definitions.py  test_router.py  test_synonym_map.py
deploy/: Caddyfile  compose.yml  deploy.sh
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: Charts.tsx  FilterBar.tsx
frontend/src/lib/: api.ts  providers.tsx
frontend/src/styles/: globals.css
infra/: main.tf
(+4 files in other folders)
